--- a/package.json
+++ b/package.json
@@ -1,28 +1,31 @@
 {
-  "name": "test-bot",
-  "version": "1.0.0",
-  "description": "",
-  "main": "javascript/index.js",
-  "scripts": {
-    "start": "yarn clean && yarn build && node --enable-source-maps .",
-    "build": "node ./scripts/build.mjs",
-    "clean": "node ./scripts/clean.mjs",
-    "watch": "node ./scripts/watch.mjs"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "packageManager": "yarn@3.0.2",
-  "dependencies": {
-    "@sapphire/framework": "next",
-    "@sapphire/prettier-config": "^1.1.6",
-    "@sapphire/ts-config": "^3.0.0",
-    "discord.js": "^13.1.0",
-    "esbuild": "^0.12.28",
-    "typescript": "^4.4.3"
-  },
-  "devDependencies": {
-    "prettier": "^2.4.1"
-  },
-  "prettier": "@sapphire/prettier-config"
+	"name": "test-bot",
+	"version": "1.0.0",
+	"description": "",
+	"main": "dist/index.js",
+	"scripts": {
+		"start": "yarn clean && yarn build && yarn lint && node --enable-source-maps .",
+		"build": "node ./scripts/build.mjs",
+		"clean": "node ./scripts/clean.mjs",
+		"watch": "node ./scripts/watch.mjs",
+		"lint": "prettier --write ."
+	},
+	"keywords": [],
+	"author": "",
+	"license": "ISC",
+	"packageManager": "yarn@3.0.2",
+	"dependencies": {
+		"@sapphire/discord.js-utilities": "next",
+		"@sapphire/framework": "next",
+		"@sapphire/prettier-config": "^1.1.6",
+		"@sapphire/ts-config": "^3.0.0",
+		"@sapphire/utilities": "next",
+		"discord.js": "^13.1.0",
+		"esbuild": "^0.12.28",
+		"typescript": "^4.4.3"
+	},
+	"devDependencies": {
+		"prettier": "^2.4.1"
+	},
+	"prettier": "@sapphire/prettier-config"
 }
